password reset, security improvements, and other fixes